# patientMatcher

./: .dockerignore  .gitignore  .travis.yml  404.html  CHANGELOG.md  CITATION.cff  Dockerfile  Dockerfile-server  LICENSE  MANIFEST.in  README.md  RELEASE.md  codecov.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  search.html  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other_issue.md
.github/workflows/: autodeploy_mkdocs.yml  black.yml  docker_build_n_publish.yml  docker_build_n_publish_stage.yml  flake8.yml  pypi_publish.yml  pytest_codecov.yml  pytest_coveralls.yml  pythonapp.yml  vulture.yml  woke.yaml
algorithm/: index.html
cli/: index.html
conda_inst/: index.html
containers/: docker-compose_auth_server_with_2_nodes.yml  docker-compose_server_with_2_nodes.yml  mongo-init.js
data_types/: index.html
docker/: conda_env.yml  entrypoint.sh  update_env.sh
docker_app/: index.html
docs/: algorithm.md  cli.md  conda_inst.md  data_types.md  docker_app.md  endpoints.md  error_emails.md  index.md  matching_emails.md  phenotype_resources.md
endpoints/: index.html
error_emails/: index.html
instance/: config.py
matching_emails/: index.html
patientMatcher/: __init__.py  auto.py
patientMatcher/auth/: auth.py
patientMatcher/cli/: __init__.py  add.py  commands.py  remove.py  update.py
patientMatcher/constants/: __init__.py
patientMatcher/instance/: config.py
patientMatcher/match/: genotype_matcher.py  handler.py  phenotype_matcher.py
patientMatcher/parse/: monarch.py  patient.py
patientMatcher/resources/: __init__.py
patientMatcher/server/: __init__.py  auto.py  controllers.py  extensions.py  views.py
patientMatcher/utils/: add.py  delete.py  disease.py  ensembl_rest_client.py  gene.py  hpo.py  load.py  notify.py  patient.py  phenotype.py  stats.py  update.py  variant.py
phenotype_resources/: index.html
search/: search_index.json
tests/: conftest.py
tests/backend/: test_backend_patient.py  test_nodes.py
tests/cli/: test_add.py  test_commands.py  test_patient.py  test_remove.py  test_update.py
tests/match/: test_GT_matching.py  test_Pheno_matching.py  test_matching.py  test_matching_handler.py  test_pheno_matching.py
tests/parse/: test_parse_patient.py
(+12 files in other folders)
