[project]
name = "patientmatcher"
version = "4.6.1"
description = "patientMatcher - a Python and MongoDB-based MatchMaker Exchange server"
authors = [
  { name = "Chiara Rasi (northwestwitch)" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
  "coloredlogs>=15.0.1,<16.0.0",
  "flask>=3.1.1,<4.0.0",
  "flask-mail>=0.10.0,<0.11.0",
  "flask-negotiate>=0.1.0,<0.2.0",
  "requests>=2.32.4,<3.0.0",
  "responses>=0.25.7,<0.26.0",
  "jsonschema>=4.24.1,<5.0.0",
  "pymongo>=4.13.2,<5.0.0",
  "enlighten>=1.14.1,<2.0.0",
  "clint>=0.5.1,<0.6.0",

  # Only needed for Python <3.9 to support importlib.resources.files
  "importlib_resources; python_version < '3.9'"
]

[project.optional-dependencies]
dev = [
  "click<8.2",
  "pytest>=8.4.1",
  "pytest-test-groups>=1.2.1",
  "mongomock>=4.3.0",
  "pytest-cov>=6.2.1",
  "requests>=2.32.4",
  "flask-mail>=0.10.0"
]

[project.scripts]
pmatcher = "patientMatcher.cli.commands:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["patientMatcher"]